--- a/.github/workflows/quiz-scaffold.yml
+++ b/.github/workflows/quiz-scaffold.yml
@@ -5,7 +5,7 @@ on:
       branch:
         description: "Target branch to write to"
         required: true
-        default: "feat/next-quiz-web"
+        default: "main"
 
 permissions:
   contents: write
