--- a/web/package.json
+++ b/web/package.json
@@ -8,22 +8,24 @@
     "start": "next start"
   },
   "dependencies": {
+    "airtable": "^0.12.2",
+    "class-variance-authority": "^0.7.0",
+    "dotenv": "^17.2.3",
+    "gsap": "^3.12.2",
+    "nanoid": "^4.0.0",
     "next": "13.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "zustand": "^4.0.0",
     "zod": "^3.20.0",
-    "class-variance-authority": "^0.7.0",
-    "gsap": "^3.12.2",
-    "nanoid": "^4.0.0"
+    "zustand": "^4.0.0"
   },
   "devDependencies": {
-    "tailwindcss": "^3.3.2",
-    "postcss": "^8.4.24",
-    "autoprefixer": "^10.4.14",
-    "typescript": "^5.1.3",
     "@types/node": "^20.3.1",
     "@types/react": "^18.2.15",
-    "@types/react-dom": "^18.2.7"
+    "@types/react-dom": "^18.2.7",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.24",
+    "tailwindcss": "^3.3.2",
+    "typescript": "^5.1.3"
   }
 }
